--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -133,11 +133,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  color: #333333;
-  background-color: #EEE;
+  color: #000000;
+  background-color: #CCC;
 }
 a {
-  color: #3190a4;
+	color:#000000;
   text-decoration: none;
 }
 a:hover {
@@ -163,7 +163,7 @@ a:hover {
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
 	  background-color: #FFF;
-  width: 1080px;
+  width: 1060px;  
 }
 .span12 {
   width: 1024px;
@@ -363,7 +363,7 @@ h6 {
   margin: 0;
   font-family: inherit;
   font-weight: bold;
-  color: inherit;
+  color: #000000;
   text-rendering: optimizelegibility;
 }
 h1 small,
@@ -373,7 +373,7 @@ h4 small,
 h5 small,
 h6 small {
   font-weight: normal;
-  color: #999999;
+  color: #000000;
 }
 h1 {
   font-size: 30px;
@@ -384,7 +384,7 @@ h1 small {
 }
 h2 {
   font-size: 24px;
-  line-height: 36px;
+  line-height: 30px;
 }
 h2 small {
   font-size: 18px;
@@ -1283,7 +1283,7 @@ select:focus:required:invalid:focus {
   color: #999999;
 }
 ::-webkit-input-placeholder {
-  color: #999999;
+  color: #CCC;
 }
 .help-block,
 .help-inline {
