--- a/app/views/doulins/_form.html.erb
+++ b/app/views/doulins/_form.html.erb
@@ -1,26 +1,116 @@
-<%= form_for @doulin, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :context, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :context, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :title, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :title, :class => 'text_field' %>
-    </div>
-  </div>
+<section id="doulin">
+	<div class="container">
+		<%= form_for @doulin, :html => { :class => 'form-horizontal' } do |f| %>
+	 <div class="row">
+		<div class="span10 offset1">
+			<div id="title">
+				<div class="row">
+					<div class="span2">
+					    <div class="image1">
+							<% if @doulin.have_first? %>
+								<%= image_tag @doulin.first_user.avatar.url(:medium), class:"image" %>
+							<%else%>
+								<%= image_tag ("default_medium.jpg") %>
+							<%end%>
+						</div>
+						<div class="first_user">
+							<% if @doulin.have_first? %>
+								<a><%= link_to @doulin.first_user.name, @doulin.first_user, class: "first_user"%></a>
+									<p class='desc'><%= @doulin.first_user.content%></p>
+							<%else%>
+								Rajouter un expert
+							<%end%>
+						</div>
+						
+					</div>
+					
+					<div class="span5" id="title2">
+							
+							<div class="title3"><%= f.text_area :title, :class => 'edit1' %></div>
 
-  <div class="field">
-  <%= f.label :tag_list, "Tags (separated by commas)" %><br />
-  <%= f.text_field :tag_list %>
-  </div>
+							<div id="content">
+								<span id="content"><%= f.text_area :context, :class => 'edit1'%></span>
+							</div>
+									
+					</div>
+					<div class="span2">
+						
+					    <div class="image2">
+							<% if @doulin.have_second? %>
+								<%= image_tag @doulin.second_user.avatar.url(:medium), class:"image" %>
+							<%else%>
+								<%= image_tag ("default_medium.jpg") %>
+							<%end%>
+						</div>
+						<div class="second_user">
+							<% if @doulin.have_second? %>
+								<a><%= link_to @doulin.second_user.name, @doulin.second_user, class: "first_user"%></a>
+									<p class='desc'><%= @doulin.second_user.content%></p>
+							<%else%>
+								Rajouter un expert
+							<%end%>
+						</div>
+						
+					</div>
 
+					
+					</div>		
+	 			</div>
+	 		</div>
+	 	</div>				
+	   	<div class="span1" id="catcat">
+			<div class="arrow-left"></div>   		
+	   		<div class="image">
+	   		<% if @doulin.cat_id == 1 %>
+	   			<%= link_to image_tag("cat-sports.png", :alt => 'Moutoners'), list_path(:cat => 1)%>
+	   		<%elsif @doulin.cat_id == 2 %>
+	   			<%= link_to image_tag("cat-quotidien.png", :alt => 'Moutoners'), list_path(:cat => 2)%>
+	   		<%elsif @doulin.cat_id == 3 %>
+	   			<%= link_to image_tag("cat-monde.png", :alt => 'Moutoners'), list_path(:cat => 3)%>
+	   		<%elsif @doulin.cat_id == 4 %>
+	   			<%= link_to image_tag("cat-economie.png", :alt => 'Moutoners'), list_path(:cat => 4)%>
+	   		<%elsif @doulin.cat_id == 5 %>
+	   			<%= link_to image_tag("cat-culture.png", :alt => 'Moutoners'), list_path(:cat => 5)%>
+	   		<%elsif @doulin.cat_id == 6 %>
+	   		 	<%= link_to image_tag("cat-sciences.png", :alt => 'Moutoners'), list_path(:cat => 6)%>
+	   		<%elsif @doulin.cat_id == 7 %>
+	   			<%= link_to image_tag("cat-philosophie.png", :alt => 'Moutoners'), list_path(:cat => 7)%>
+	   		<%elsif @doulin.cat_id == 8 %>
+	   			<%= link_to image_tag("cat-societe.png", :alt => 'Moutoners'), list_path(:cat => 8)%>
+		   	<%else%>
 
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                doulins_path, :class => 'btn' %>
-  </div>
-<% end %>
+			<%end%>
+	   		</div>
+			</br>	
+			<p><%= f.text_area :cat_id, :class => 'edit0' %></p>
+	   	</div>
+	
+		<div class="row">
+			<div class="span6 offset4">
+				<%= f.label :tag_list, "Tags (separated by commas)" %><br />
+			  <%= f.text_area :tag_list, :class => 'edit1' %>
+			</div>
+		</div>
+
+		
+		<div class="row">
+			<div class="row" id ="openning-context">
+				<div class="texte">Contexte</div>
+				<div class="arrow-down-context"></div>
+				<div class="arrow-up-context"></div>
+			</div>
+			<div class "row" id="to-be-closed">
+				<div id="effective-context"><div class="text"><%= f.text_area :content, :class => 'edit2'%></div></div>
+			</div>
+		</div>
+		
+		
+		  <div class="form-actions">
+		    <%= f.submit "VALIDER", :class => 'btn btn-primary' %>
+		    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+		                doulins_path, :class => 'btn' %>
+		  </div>
+		<% end %>
+	
+	</div>
+</section>
