--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
     
     <%= yield :head %>
     
-    <link rel="shortcut icon" href="/assets/favicon.gif" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon" />
     
-    <title>Moutoner | Venez débattre </title>
+    <title>Moutoner | Viens débattre </title>
     
     <!--[if lt IE 9]>
       <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
