--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -30,13 +30,13 @@
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a {
-  color: $mainColor;
+  color: #000000;
 }
 
 h1.title, h2.title, h3.title, h4.title, h5.title {
   @include border-bottom;
 	font-family: 'gotham';
-  margin-bottom: 20px;
+  	margin-bottom: 15px;
 }
 
 .span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {
@@ -128,18 +128,23 @@ input.ajust-input, textarea.ajust-input {
 }
 
 #menu-categories{
-	margin-left: 300px;
-	background-color:#EEE;
-	height: 330px;
+	height: 460px;
+	width: 180px;
+	margin-left: 217px;
+	margin-bottom: 20px;
+	background-color:#AAD0FF;
 	margin-top: 15px;
+	border-radius:13px;
 	
-	
-	.row{
-		margin-top: 20px;
-		margin-left: 10px;
+	.image{
+		padding-top: 15px;
+		padding-left: 35px;
 		
 		.categ{
-			color: $mainColor;
+			padding-left: 20px;
+			font-size:15px;
+			color: #000000;
+			font-family:"gotham";
 			font-weight: bold;
 		}
 	}
@@ -147,75 +152,207 @@ input.ajust-input, textarea.ajust-input {
 
 #debate-badge{
 	#debate-badge1{
-		height:160px;
-		width:500px;
+		height:128px;
+		width:470px;
 		background-color:#EEE;
 		margin-bottom:30px;
 		
 		#debate-badge2{
-			height:130px;
-			width: 110px;
-			background-color:#3C3C3B;
-			margin-top:15px;
-			margin-bottom:15px;
-			color: #FFF;
-			font-weight: bold;
+		padding-left: 20px;
+		padding-top: 40px;
 		}
 		
-		#title{
-			margin-top:10px;
+		.texte{
+		width:360px;
+		margin-top:8px;
+		margin-left:-20px;
+		
+	   	 .title{
+		 width: 340px;
+		 margin:-100px 0px 3px 10px;
+	   	 text-align: center;
+	   	 font-family:"gotham";
+	   	 font-size:18px;
+	   	 color:black;
+	   	 }
+	   	 .context{
+	   	 padding-right:40px;
+	   	 text-align:center;
+	   	 padding-left:15px;
+	   	 font-family:"georgia";
+	   	 font-size:13px;
+	   	 font-style : italic;
+	   	 }
 		}
 	}
+		.follow{
+		margin-left:-20px;
+		
+		}
 	
+		.categorie{
+		margin-top:20px;
+		margin-left:-20px;
+		height:65px;
+		width:90px;
+		background-color:#AAD0FF;
+		
+		 .arrow-left{
+			padding-left:58px;
+		 	width: 0; 
+		 	height: 0; 
+		 	border-top: 32px solid transparent;
+		 	border-bottom: 34px solid transparent; 
+         
+		 	border-right:32px solid white;
+		 }
+		 .image{
+			padding-left:10px;
+			margin-top:-53px;
+		 }
+		}
 }
 
 #challenge-badge{
 	#challenge-badge1{
-		height:160px;
-		width:500px;
+		height:128px;
+		width:470px;
 		background-color:#EEE;
 		margin-bottom:30px;
 		
 		#challenge-badge2{
-			height:130px;
-			width: 110px;
-			background-color:#3C3C3B;
-			margin-top:15px;
-			margin-bottom:15px;
-			color: #FFF;
-			font-weight: bold;
+		padding-left: 20px;
+		padding-top: 40px;
 		}
 		
-		#title{
-			margin-top:10px;
+		.texte{
+		width:360px;
+		margin-top:8px;
+		margin-left:-20px;
+		
+	   	 .title{
+		 width: 340px;
+		 margin:-100px 0px 3px 10px;
+	   	 text-align: center;
+	   	 font-family:"gotham";
+	   	 font-size:18px;
+	   	 color:black;
+	   	 }
+	   	 .context{
+	   	 padding-right:40px;
+	   	 text-align:center;
+	   	 padding-left:15px;
+	   	 font-family:"georgia";
+	   	 font-size:13px;
+	   	 font-style : italic;
+	   	 }
 		}
 	}
+		.follow{
+		margin-left:-20px;
+		}
 	
+		.categorie{
+		margin-top:20px;
+		margin-left:-20px;
+		height:65px;
+		width:90px;
+		background-color:#AAD0FF;
+		
+		 .arrow-left{
+			padding-left:58px;
+		 	width: 0; 
+		 	height: 0; 
+		 	border-top: 32px solid transparent;
+		 	border-bottom: 34px solid transparent; 
+         
+		 	border-right:32px solid white;
+		 }
+		 .image{
+			padding-left:10px;
+			margin-top:-53px;
+		 }
+		}
 }
 
 #doulin-badge{
+		
+	#image-gauche{
+		border:1px solid #000000;
+		float:left;
+		width:110px;
+		height:128px;
+		img { width: 110px; height:128px;}
+	}
+		
 	#doulin-badge1{
-		height:160px;
-		width:500px;
-		background-color:#EEE;
+		min-height:130px;
+		width:247px;
+		background-color:#000000;
+		margin-left:0px;
 		margin-bottom:30px;
 		
-		#doulin-badge2{
-			height:130px;
-			width: 110px;
-			background-color:#3C3C3B;
-			margin-top:15px;
-			margin-bottom:15px;
-			color: #FFF;
-			font-weight: bold;
-		}
-		
-		#title{
-			margin-top:10px;
-		}
+			.title{
+			margin: 10px 10px 10px 10px; 
+			color:white;
+			font-family:"gotham";
+			font-size:16px;
+			text-align:center;
+			}
+			
+			.nom1{
+			color:$mainColor;
+			font-family:"bebasneue-webfont";
+			font-size:18px;
+			text-align:left;
+			padding-left: 20px;
+			}
+			
+			.nom2{
+			color:$mainColor;
+			font-family:"bebasneue-webfont";
+			font-size:18px;
+			text-align:right;
+			padding-right: 20px;
+			}
 	}
 	
+	#image-droite{
+		margin-left:0px;
+		border:1px solid #000000;
+		width:110px;
+		height:128px;
+		img { width: 110px; height:128px;}
+	}
+	
+	
+	.follow{
+	margin-left:-20px;
+	}
+	
+	.categorie{
+	margin-left:-20px;
+	margin-top:20px;
+	height:65px;
+	width:90px;
+	background-color:#AAD0FF;
+	
+	 .arrow-left{
+		padding-left:58px;
+	 	width: 0; 
+	 	height: 0; 
+	 	border-top: 32px solid transparent;
+	 	border-bottom: 34px solid transparent; 
+     
+	 	border-right:32px solid white;
+	 }
+	 .image{
+		padding-left:10px;
+		margin-top:-53px;
+	 }
+	}
 }
+
 
 #group-badge{
 	#group-badge1{
