--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -31,6 +31,7 @@ header {
 	}
 	
 	#search-text{
+	  border-radius: 0px;
 	  margin-top: -46px;
 	  margin-left: 65px;
 	  width: 152px;
@@ -134,10 +135,10 @@ header {
 	margin-top:50px;
 	
 	#user-nav {    
-	  margin-left:150px;
+	  margin-left:120px;
 	  background-color: #000000;
       height:28px;
-	  width: 128px;
+	  width: 158px;
 	  font-family: 'gotham';
 	  color: white;
 	  text-align:center;
@@ -162,7 +163,7 @@ header {
 	}
 	
 	#dropdown{
-		margin-left:135px;
+		margin-left:165px;
 		margin-top: -25px;
 		
 	}
