--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,72 +1,9 @@
-
-
 <h2>Create a debate</h2>
 
-<%= form_for @debate, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :title, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :title, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :content, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :content, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :categorie, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :cat_id, :class => 'text_field' %>
-    </div>
-  </div>
-  
-  <div class="field">
-  <%= f.label :tag_list, "Tags (separated by commas)" %><br />
-  <%= f.text_field :tag_list %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                debates_path, :class => 'btn' %>
-  </div>
-<% end %>
-
-
-</br>
-</br>
+<%= render "debates/form"%>
 </br>
 </br>
 
 <h2>Create a doulin</h2>
 
-<%= form_for @doulin, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :context, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :context, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :title, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :title, :class => 'text_field' %>
-    </div>
-  </div>
-
-  <div class="field">
-  <%= f.label :tag_list, "Tags (separated by commas)" %><br />
-  <%= f.text_field :tag_list %>
-  </div>
-
-
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                doulins_path, :class => 'btn' %>
-  </div>
-<% end %>
-
-Give positions to doulins
+<%= render "doulins/form"%>
