--- a/app/views/expertises/new.html.erb
+++ b/app/views/expertises/new.html.erb
@@ -9,8 +9,11 @@
   <%= f.label :content, "Position" %><br />
   <%= f.number_field :position %><br/>
 
-  <%= f.label :content, "User" %><br />
+  <%= f.label :content, "User id" %><br />
   <%= f.text_field :user_id %><br/>
+
+  <%= f.label :content, "Doulin id" %><br />
+  <%= f.text_field :doulin_id %><br/>
 
 <%= f.submit "Rajouter" %>
 
