--- a/app/views/static_pages/cgu.html.erb
+++ b/app/views/static_pages/cgu.html.erb
@@ -1,33 +1,25 @@
 TEST JAVA
 
-<div id="images">
-    <img src="http://www.placekitten.com/100/100" data-target="#content1" />
-    <img src="http://www.placekitten.com/100/100" data-target="#content2" />
-    <img src="http://www.placekitten.com/100/100" data-target="#content3" />
-</div>
-<div id="contents">
-    <div id="content1" class="active">Content1</div>
-	</br>
-    <div id="content2">Content2
-		òinibvibmnivucyfguvlbimnlibyuvtulbhi
+<div id="container">
+	<div class="item">
+		<h3 class="toggleOpen">Open Me!</h3>
+		<div class="toggle">
+			<span class="toggleClose">x</span>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum ligula vitae nisl.</p>
+		</div>
 	</div>
-	</br>
-    <div id="content3">Content3</div>
+	<div class="item">
+		<h3 class="toggleOpen">Open Me!</h3>
+		<div class="toggle">
+			<span class="toggleClose">x</span>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum ligula vitae nisl vehicula elementum. Quisque d.</p>
+		</div>
+	</div>	<div class="item">
+			<h3 class="toggleOpen">Open Me!</h3>
+			<div class="toggle">
+				<span class="toggleClose">x</span>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum ligula vitae nisl vehicul</p>
+			</div>
+		</div>
 </div>
 
-
-<div id="badge">
-	<button id="challenge">
-		challenge
-	</button>
-	<% @lists.each do |ob|%>
-	<div class="debate">
-	<% if ob.class == Debate %>
-	 	<%= render "shared/debate_badge", :debate => ob %>
-	</div>
-	<div class="challenge">
-	<% elsif ob.class == Challenge %>
-		 <%= render "shared/challenge_badge", :challenge => ob %>
-	</div>
-	<% end %>
-	<%end%>
