--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -67,37 +67,27 @@
         </div>
 
     </div>
-  </div>
-</section>
 
-
-
-<section id="best-debates">
-	<div class="container">
-	    <div class="row">
+	<div class="row">
 		
-	      <div class="span4 offset2">
-	        <div id="best-debates1">
-				DEBATS LES PLUS SUIVIS
-	        </div>
-	      </div>
-	
-	      <div class="span4">
-	        <div id="best-debates1">
-				DEBATS EXPERTS A VENIR
-	        </div>
-	      </div>
-	
-	    </div>
-	  </div>
-   <div class="container">
-	<%= render "shared/menu_cat"%>
-
-	<div class="span7 offset 4" id="best-debates2">
-      <%#   <%= render "shared/challenge_badge", :challenge => @challenge%>
-      <%#   <%= render "shared/doulin_badge", :doulin => @doulin %>
-      <%#   <%= render "shared/debate_badge", :debate => @debate %>
+	   <div id="best-debates1">
+	   	DEBATS LES PLUS SUIVIS
+	   </div>
+	 
+	   <div id="best-debates2">
+	   	DEBATS EXPERTS A VENIR
+	   </div>
 	</div>
-   </div>
-  
-</section>
+	
+	<div class="row" id="en-bas">
+		<%= render "shared/menu_cat"%>
+	
+		<div id="best-debates3">
+    	    <%= render "shared/challenge_badge", :challenge => @challenge%>
+    	    <%= render "shared/debate_badge", :debate => @debate %>
+    	    <%= render "shared/doulin_badge", :doulin => @doulin %> 
+		</div>
+	</div>
+		
+  </div>
+</section>  
