--- a/app/views/static_pages/list.html.erb
+++ b/app/views/static_pages/list.html.erb
@@ -1,38 +1,11 @@
-<section>
-	<div class="span2" id="menu-categories">
-		<div class ="row">
-			<%= link_to "SPORTS", list_path(:cat => 1), :class => "categ"%>
-		</div>
-		
-		<div class ="row">
-			<%= link_to "VIE", list_path(:cat => 2), :class => "categ"%>
-		</div>
-		
-		<div class ="row">
-			<%= link_to "MONDE", list_path(:cat => 3), :class => "categ"%>
-		</div>
-		
-		<div class ="row">
-			<%= link_to "ECONOMIE", list_path(:cat => 4), :class => "categ"%>
-		</div>
-		
-		<div class ="row">
-			<%= link_to "CULTURE", list_path(:cat => 5), :class => "categ"%>
-		</div>
-		
-		<div class ="row">
-			<%= link_to "SCIENCES", list_path(:cat => 6), :class => "categ"%>
-		</div>
-		
-		<div class ="row">
-			<%= link_to "QUESTIONNEMENT", list_path(:cat => 7), :class => "categ"%>
-		</div>
-		
-		<div class ="row">
-			<%= link_to "SOCIETE", list_path(:cat => 8), :class => "categ"%>
-		</div>
-		
-	</div>
-<section>
-
-<%= render "shared/index", :object => @lists %>
+<div class="container">
+				<div class="row">
+					<div class="span2">
+						<%= render "shared/menu_cat"%>
+					</div>
+	
+					<div class="span8" id="for-badges">
+						<%= render "shared/index", :object => @lists %>
+					</div>
+				</div>
+</div>
